# PTCG_AI_Battle_Client

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md
.github/workflows/: ci.yml
decks/: dragapult-ex.yaml
docs/: protocol.ja.md  protocol.md
docs/bots/: dragapult-ex.takeuchi.machine.md  dragapult-ex.takeuchi.md  dragapult-ex.yopifutto.machine.md  dragapult-ex.yopifutto.md
docs/sample-match/: README.ja.md  README.md  raw.jsonl
src/: cards.rs  deck.rs  lib.rs  transport.rs
src/bots/: dragapult_takeuchi.rs  dragapult_yopifutto.rs  mod.rs  random.rs
src/wire/: action.rs  event.rs  mod.rs  protocol.rs  state.rs
tests/: wire_contract.rs
