[package]
name = "ptcg-dragapult-bots"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Reference Pokémon TCG (Dragapult ex) AI bots and a thin WebSocket client for the PTCG AI Battle Platform"
repository = "https://github.com/1ulce/PTCG_AI_Battle_Client"
readme = "README.md"
keywords = ["pokemon-tcg", "ai", "bot", "websocket"]
categories = ["games"]

[lib]
name = "ptcg_dragapult_bots"
path = "src/lib.rs"

[[bin]]
name = "connect"
path = "src/bin/connect.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rand = "0.8"
rand_chacha = "0.3"
# rustls-tls-native-roots = pure-Rust TLS + OS のルート証明書。wss:// 接続用
# (OpenSSL 等のシステム依存なしでどこでもビルドできる)。
tungstenite = { version = "0.29", default-features = false, features = [
    "handshake",
    "rustls-tls-native-roots",
] }
# rustls 0.23 は CryptoProvider を明示選択する必要がある。ring は cmake/OpenSSL 不要で
# どこでもビルドできる pure-Rust 寄りプロバイダ。transport.rs で install_default する。
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
